# qiskit-mori

./: .stestr.conf  README.rst  requirements.txt  setup.cfg  test-requirements.txt  tox.ini
qiskit_mori/: backends.py  circuit_to_program.py  provider.py
qiskit_mori/tests/: test_circuit_to_program.py
