[metadata]
name = qiskit-mori
summary = A qiskit provider for rigetti's forest quatum service
description-file =
    README.rst
author = Matthew Treinish
author-email = mtreinish@kortar.org
classifier =
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6

[files]
packages =
    qiskit_mori
